# EigenMM

./: CMakeLists.txt  CMakeLists_standalone.txt  Fullmatrix.C  Fullmatrix_orig.C  LICENSE  README.md  eigen_maj.h  eigen_mm.h  example_install.sh  install_eigenSolver.sh  install_eigenSolver_brown.sh  main.cpp  main_verbose.cpp  options.xml  xml_test.xml
experiments/: test_options.xml
experiments/mcompress/: example_experiment.sh  set_options.py
experiments/mcompress/input/: square4k_K  square4k_M
experiments/mcompress/logs/: square4k.9538321.out
experiments/mcompress/options/: square4k_options.xml
include/: aux_functions.h  eigen_mm.h
include/eigenmm/: eigen_mm.h
include/mcompress/: bfdecode.hpp  bfencode.hpp  bftypes.hpp  bfutils.hpp  mcompress.hpp
paper/: compression.tex  conclusion.tex  eigenbasis.tex  flaplacian.tex  intro.tex  paper.tex  results.tex
paper/eigenmm/: compression.tex  eigenbasis.tex  paper.tex  refs.bib
paper/eigenmm/figures/: solvetime_vs_count.tex
paper/figures/: compress1.tex  compress2.tex  efficiency.tex  reduce1.tex  reduce2.tex  scaling_4_log.tex
src/: aux_functions.cpp  eigen_mm.cpp  main.cpp  test_cholesky.cpp  test_fractional1.cpp  test_fractional1_info.cpp  test_fractional2.cpp  utils.cpp
src/eigenmm/: eigen_mm.cpp  eigen_mm_solve.cpp
src/mcompress/: apply.cpp  dense_matvec.cpp  encode.cpp
